Manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: a2f96676aff0f4b9582f5db191fcd2ed-280246728.us-east-2.elb.amazonaws.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bankapp-service
                port:
                  number: 8080
